Changed the heading size as there was an error in the code(<h25> instead of <h2>)

--- a/Bootstrap_task/bootstrap_online_shop.html
+++ b/Bootstrap_task/bootstrap_online_shop.html
@@ -33,7 +33,7 @@
 <body>
 <header class="header-container">
   <div class="heading-container">
-    <h25>One Stop Appliance Shop</h2> 
+    <h2>One Stop Appliance Shop</h2> <!--changed the heading size as there was an error in the code(<h25> instead of <h2>)-->
   </div>     
 </header>
 
