--- a/Bootstrap_task/bootstrap_online_shop.html
+++ b/Bootstrap_task/bootstrap_online_shop.html
@@ -27,6 +27,49 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">  <!--link to the external styles.css stylesheet-->
+    <script>
+      // Function to calculate discounted price and generate HTML content
+      function calculateDiscountAndGenerateHTML(originalPrice) {
+          var discountedPrice;
+          var discountPercentage;
+          if (originalPrice < 10000) {
+              // 50% off for items below R10,000
+              discountedPrice = originalPrice * 0.5;
+              discountPercentage = 50;
+          } else {
+              // 40% off for items above R10,000
+              discountedPrice = originalPrice * 0.6;
+              discountPercentage = 40;
+          }
+
+          // Generate HTML content with crossed out previous price, new price, and discount percentage
+          return '<del>R' + originalPrice.toFixed(2) + '</del> R' + discountedPrice.toFixed(2) + ' (<span class="discount">' + discountPercentage + '% off</span>)';
+      }
+
+      // Function to apply discount and update HTML
+      function applyDiscount() {
+          // Select all elements with class 'details-box'
+          var detailsBoxes = document.querySelectorAll('.details-box');
+
+          // Loop through each details box
+          detailsBoxes.forEach(function(box) {
+              // Find the price element within the details box
+              var priceElement = box.querySelector('p');
+
+              // Extract the original price from the price element text
+              var originalPrice = parseFloat(priceElement.innerText.replace('R', '').replace(' ', '').replace(',', ''));
+
+              // Generate HTML content with discounted price and discount percentage
+              var htmlContent = calculateDiscountAndGenerateHTML(originalPrice);
+
+              // Update the price element with the generated HTML content
+              priceElement.innerHTML = htmlContent;
+          });
+      }
+
+      // Apply discount when the page loads
+      window.onload = applyDiscount;
+  </script>
     <title>Online-Shopping-Page</title>
 </head>
 
